--- a/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
@@ -1,19 +1,45 @@
-<section style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
-background-size: 1920px 1200px; background-repeat: no-repeat;">
+<section class="stud-div" >
+  <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
+background-size: 1920px 1200px; background-repeat: no-repeat;" -->
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
-          <div class="card-body p-4 p-lg-5 text-black">
+          <div class="card-body p-4 p-lg-5 " style="color: rgb(5, 50, 70);">
+            <!-- text-black -->
             <h2 class="h1 fw-bold mb-0">Student Details</h2>
             <form [formGroup]="studRegisterForm" (ngSubmit)="onSubmit()" novalidate>
+
+
+                <!-- COLLEGE NAME -->
+                <div class="form-outline mb-2">
+                  <label for="collegeName" class="col-sm-3 col-form-label fw-bolder">College Name:</label>
+                                  <div class="col-sm-9" id="inputfield">
+                                      <input type="text" class="form-control form-select-lg " id="collegeName" formControlName="collegeName" placeholder="Enter College Name">
+                                      <div *ngIf="isInvalid('collegeName')" class="text-danger">
+                                          {{ getErrorMessage('collegeName') }}
+                                      </div>
+                                  </div>
+                </div>
+
+                <!-- COLLEGE ADDRESS -->
+                <div class="form-outline mb-2">
+                  <label for="collegeAddress" class="col-sm- col-form-label fw-bolder">College Address:</label>
+                                  <div class="col-sm-9" id="inputfield">
+                                      <input type="text" class="form-control form-select-lg" id="collegeAddress" formControlName="collegeAddress" placeholder="Enter College Address">
+                                      <div *ngIf="isInvalid('collegeAddress')" class="text-danger">
+                                          {{ getErrorMessage('collegeAddress') }}
+                                      </div>
+                                  </div>
+                </div>
+
 
 
               <!-- City -->
               <div class="form-outline mb-2">
                 <label for="city" class="col-sm-3 col-form-label fw-bolder ">City:</label>
                                 <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg " id="city" formControlName="city" placeholder="Enter City">
+                                    <input type="text" class="form-control form-select-lg " id="city" formControlName="city" placeholder="Enter College Name">
                                     <div *ngIf="isInvalid('city')" class="text-danger">
                                         {{ getErrorMessage('city') }}
                                     </div>
@@ -45,44 +71,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
               </div>
 
 
-
-
-
-              <!-- COLLEGE NAME -->
-              <div class="form-outline mb-2">
-                <label for="collegeName" class="col-sm-3 col-form-label fw-bolder">College Name:</label>
-                                <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg " id="collegeName" formControlName="collegeName" placeholder="Enter College Name">
-                                    <div *ngIf="isInvalid('collegeName')" class="text-danger">
-                                        {{ getErrorMessage('collegeName') }}
-                                    </div>
-                                </div>
-              </div>
-
-              <!-- COLLEGE ADDRESS -->
-              <div class="form-outline mb-2">
-                <label for="collegeAddress" class="col-sm- col-form-label fw-bolder">College Address:</label>
-                                <div class="col-sm-9" id="inputfield">
-                                    <input type="text" class="form-control form-select-lg" id="collegeAddress" formControlName="collegeAddress" placeholder="Enter College Address">
-                                    <div *ngIf="isInvalid('collegeAddress')" class="text-danger">
-                                        {{ getErrorMessage('collegeAddress') }}
-                                    </div>
-                                </div>
-              </div>
-
-                  <!-- COLLEGE description -->
-                  <div class="form-outline mb-2">
-                    <label for="collegeDescription" class="col-sm- col-form-label fw-bolder">College Description:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                       <textarea rows="3" class="form-control form-select-lg" id="collegeDescription" formControlName="collegeDescription" placeholder="Enter College Description"></textarea>
-                                        <div *ngIf="isInvalid('collegeDescription')" class="text-danger">
-                                            {{ getErrorMessage('collegeDescription') }}
-                                        </div>
-                                    </div>
-                  </div>
-
-
-              <!--YOP + drop-down-->
+              <!--YOP-->
               <div class="form-outline mb-2">
                 <label for="yearOfPassing" class="col-sm- col-form-label fw-bolder">Year of Passing:</label>
                                 <div class="col-sm-9" id="inputfield">
@@ -107,10 +96,14 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                 </div>
               </div>
 
-     
-             
-              <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!studRegisterForm.valid" >Register</button>
-              
+
+              <button type="submit" class="btn btn-primary" id="inputfield" [disabled]="!studRegisterForm.valid">Register</button>
+              <p class="text-center mt-3">
+                <!-- Already a Member? <a routerLink="/stud-login" style="color: #393f81;">Login</a> -->
+              </p>
+
+              <!-- <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!studRegisterForm.valid" >Register</button> -->
+
 
             </form>
           </div>
