--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.css
@@ -1,13 +1,15 @@
 .top-div {
   margin: 0;
   padding: 0;
-  background-color: #3c6a8b;
+  /* background-color: #b8cbd9; */
+  background-color: hsl(217, 25%, 90%);
   background-size: cover;
   height: 100%;
 }
 
 #formcard {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color:#7ea3bc;
+  /* background-color: rgba(255, 255, 255, 0.5); */
   backdrop-filter: blur(10px);
   border-radius: 2rem;
   padding: 20px;
