--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
@@ -3,11 +3,11 @@
 
 <section class="top-div">
   <div class="container-fluid py-5">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-md-8">
-        <div id="formcard">
+        <div id="formcard" style="color: white;" >
           <!-- Your appointment form content -->
-          <h3 style="font-weight: bolder;">Post your Job here !! </h3>
+          <h3 class="text-center" style="font-weight: bolder; color: #e8ebed;">Post your Job here !! </h3>
           <form [formGroup]="jobRegisterForm" (ngSubmit)="onSubmit()" novalidate>
 
             <!-- Job Name -->
@@ -41,8 +41,8 @@
             <div class="form-outline mb-2">
               <label for="jobType" class="col-sm-3 col-form-label">Job Type</label>
               <div class="col-sm-9" id="inputfield">
-                  <select id="jobType" formControlName="jobType" class="form-select form-select-lg" placeholder="Select the Type" required>
-                     
+                  <select id="jobType" formControlName="jobType" class="form-select form-select-lg" required>
+                      <option  value="" selected>Select Year</option>
 
                       <option value="value1">Software Developer</option>
                       <option value="value2">Java Developer</option>
@@ -65,7 +65,7 @@
              <div class="form-outline mb-2">
               <label for="jobDescription" class="col-sm-3 col-form-label">Job Description:</label>
                               <div class="col-sm-9" id="inputfield">
-                                <textarea rows="5" class="form-control form-select-lg" id="jobDescription" formControlName="jobDescription" placeholder="Job Description"></textarea>
+                                <textarea rows="5" class="form-control form-select-lg" id="jobDescription" formControlName="jobDescription" placeholder="Project"></textarea>
                                   <!-- <input type="text" class="form-control form-select-lg " id="jobDescription" formControlName="jobDescription" placeholder="Language"> -->
                                   <div *ngIf="isInvalid('jobDescription')" class="text-danger">
                                     {{ getErrorMessage('jobDescription') }}
@@ -77,9 +77,9 @@
 
             <!-- vacancy -->
             <div class="form-outline mb-2">
-              <label for="jobVacancy" class="col-sm-3 col-form-label">Job Vacancy:</label>
+              <label for="jobVacancy" class="col-sm-3 col-form-label">Phone No:</label>
                               <div class="col-sm-9" id="inputfield">
-                                  <input type="number" class="form-control form-select-lg " id="jobVacancy" formControlName="jobVacancy" placeholder="Vacancy">
+                                  <input type="number" class="form-control form-select-lg " id="jobVacancy" formControlName="jobVacancy" placeholder="Phone">
                                   <div *ngIf="isInvalid('jobVacancy')" class="text-danger">
                                     {{ getErrorMessage('jobVacancy') }}
                                   </div>
@@ -116,12 +116,6 @@
             </div> -->
 
 
-
-
-
-
-
-
             <!-- Key Skill -->
             <!-- <div class="form-outline mb-2">
               <label for="keyskill" class="col-sm-3 col-form-label">Key Skill</label>
@@ -147,7 +141,6 @@
 
 
 
-
             <!-- Project -->
             <!-- <div class="form-outline mb-2">
               <label for="project" class="col-sm-3 col-form-label">Project </label>
@@ -160,8 +153,8 @@
             </div> -->
 
 
-<!-- 
-            Resume
+
+            <!-- Resume -->
             <div class="form-outline mb-2">
               <label for="jobFile" class="col-sm-3 col-form-label">Upload Job Description(optional):</label>
               <div class="col-sm-9" id="inputfield">
@@ -170,20 +163,22 @@
                       {{ getErrorMessage('jobFile') }}
                   </div>
               </div>
-          </div> -->
+          </div>
+
+          <br>
 
 
 
           <div>
               <div>
-                  <button type="submit" class="btn btn-primary w-100" >Post the Job</button>
+                  <button type="submit" class="btn btn-primary w-100" >Post </button>
               </div>
           </div>
         </form>
       </div>
   </div>
   <div class="col-md-4">
-      <div id="sidebar" style="color: azure;">
+      <div id="sidebar" style="color: rgb(1, 6, 6);">
           <!-- Sponsor card and Wise card content -->
           <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Sponsors</h1>
           <ul type="none">
@@ -216,6 +211,5 @@
 </div>
 </div>
 </section>
-
 
 
