--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.css
@@ -1,13 +1,16 @@
 .top-div {
   margin: 0;
   padding: 0;
-  background-color: #3c6a8b;
+  background-color: rgb(215, 226, 238);
+  /* background-color: rgb(180, 197, 215); */
   background-size: cover;
   height: 100%;
 }
 
 #formcard {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5); */
+  /* background-color: rgb(180, 197, 215); */
+  background-color: rgba(184, 217, 234, 0.729);
   backdrop-filter: blur(10px);
   border-radius: 2rem;
   padding: 20px;
