--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
@@ -7,7 +7,7 @@
       <div class="col-md-8">
         <div id="formcard">
           <!-- Your appointment form content -->
-          <h3 style="font-weight: bolder;">Job Seeker Form</h3>
+          <h3 style="font-weight: bolder; color:rgb(18, 26, 99);">Job Seeker Form</h3>
           <form [formGroup]="jobSeekerForm" (ngSubmit)="onSubmit()" novalidate>
 
             <!-- Full Name -->
@@ -160,18 +160,18 @@
               </div>
           </div>
 
-
+          <br>
 
           <div>
               <div>
-                  <button type="submit"  class="btn btn-primary w-100" >Submit </button>
+                  <button type="submit" class="btn btn-primary w-100" >Submit </button>
               </div>
           </div>
         </form>
       </div>
   </div>
   <div class="col-md-4">
-      <div id="sidebar" style="color: azure;">
+      <div id="sidebar" style="color:rgb(18, 26, 99);">
           <!-- Sponsor card and Wise card content -->
           <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Sponsors</h1>
           <ul type="none">
@@ -204,6 +204,5 @@
 </div>
 </div>
 </section>
-
 
 
