--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
@@ -1,62 +1,29 @@
-<section class="vh-50"
-style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;">
+<section class="log-div">
+  <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;" -->
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px);">
           <div class="row g-0">
+
+            <!-- Image -->
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
               alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 100%;" />
             </div>
+
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-            <!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
-
-                  <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">Online Recruitment System</span>
-                  </div>
-
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login into your account</h5>
-
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <label for="email" class="form-label">Email Id</label>
-                    <input type="email" id="email" formControlName="email" class="form-control form-control-lg" placeholder="Enter your email">
-                    <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="invalid-feedback">
-                      <div *ngIf="loginForm.get('email')?.errors?.['required']">Email is required.</div>
-                      <div *ngIf="loginForm.get('email')?.errors?.['email']">Please provide a valid email.</div>
-                    </div>
-                  </div>
-
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <label for="Password" class="form-label">Password</label>
-                    <input type="password" [type]="hide ? 'password' : 'text'" class="form-control form-control-lg" id="Password1" formControlName="password" placeholder="Enter your password">
-                    <input type="checkbox" (change)="hide = !hide"> Show Password
-                    <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="invalid-feedback">
-                      <div *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</div>
-                      <div *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 8 characters long.</div>
-                    </div>
-                  </div>
-
-                  <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid" routerLink="/login-success">Login</button>
-                  </div>
-
-                  <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a routerLink="/register" style="color: #393f81;">Register here</a></p>
-                </form> -->
-
-
+                <!-- Form Section -->
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
 
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">Online Recruitment System</span>
+                    <span class="h2 fw-bold mb-0" style="color: rgb(5, 15, 60);">Log In Page</span>
                   </div>
 
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login into your account</h5>
+                  <!-- <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login into your account</h5> -->
 
                   <div data-mdb-input-init class="form-outline mb-4">
                     <label for="email" class="col-sm-3 col-form-label">Email:</label>
@@ -87,10 +54,10 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                         <option value="EMP" selected>EMP</option>
                         <option value="GRAD">GRAD</option>
                       </select>
-                      
+
                       </div>
                       <input type="text" class="form-control col-sm-3 w-20" formControlName="roleId" name="roleId" id="roleId" placeholder="Enter the ID">
-                      
+
                     </div>
                     <div *ngIf="isInvalid('roleId')" class="text-danger">
                       {{ getErrorMessage('roleId') }}
@@ -99,16 +66,16 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                       {{ getErrorMessage('idName') }}
                     </div>
                   </div>
-                
 
-                
+
+
 
                   <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary w-50" type="submit" [disabled]="loginForm.invalid">Login</button>
                   </div>
 
                   <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a routerLink="/register" style="color: #393f81;">Register here</a></p>
+                  <p class="mb-5 pb-lg-2"style="color: rgb(5, 15, 60);">Don't have an account? <a routerLink="/register" style="color: rgb(5, 15, 60);">Register here</a></p>
                 </form>
               </div>
             </div>
