--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
@@ -1,3 +1,22 @@
 #inputfield{
-    width: 100%;
+  width: 100%;
+}
+
+.reg-div
+{
+  /* background-image: url('./regImage/reg.png');
+  min-height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative; */
+  background-color: rgb(90, 174, 180);
+}
+
+/* .form-div{
+background-color: bisque;
+} */
+
+.regDiv{
+background-color: rgb(146, 171, 198);
 }
