--- a/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
@@ -31,6 +31,14 @@
           </li>
 
 
+
+          <!-- Post Jobs -->
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="/job-register" routerLinkActive="active">Post Jobs</a>
+          </li>
+
+
+
           <!-- Services -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item">
