The frontend and backend without job description frontend

--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -1,18 +1,29 @@
-<section class="vh-100" style="background-color: #3c6a8b">
+<!-- <section class="vh-100" style="background-color: #3c6a8b">
   <div class="row d-flex h-100">
     <div class="card d-flex flex-column  align-items-center" >
-     <!-- style="background-image: url('https://www.sapphiresolutions.net/images/job_new_portfolio/job_portal_about.svg'); background-size: 100% ; background-repeat: no-repeat;" -->
-     <!-- style="border-radius: 1rem; background-color: rgba(254, 243, 243, 0.892); backdrop-filter: blur(10px);" -->
+     style="background-image: url('https://www.sapphiresolutions.net/images/job_new_portfolio/job_portal_about.svg'); background-size: 100% ; background-repeat: no-repeat;" -->
+     <!-- style="border-radius: 1rem; background-color: rgba(254, 243, 243, 0.892); backdrop-filter: blur(10px);"
       <h1 class="h1 fw-bold mb-0" >Welcome To Online Recruitment System</h1>
 
-      <!-- <div class="button-group mt-4">
+      <div class="button-group mt-4">
         <a class="btn btn-lg btn-dark mr-2" routerLink="/login" role="button">Login</a>
         <a class="btn btn-lg btn-dark" routerLink="/register" role="button">Register</a>
-      </div> -->
+      </div>
 
 
       <hr class="my-4">
-      <!-- <p class="lead">Created by Shiva Charan Reddy Kallem</p> -->
+    
     </div><app-job-search></app-job-search>
   </div>
-</section>
+</section> -->
+
+<div class="container">
+  <div class="background"></div>
+  <div class="content">
+    <h1 class="animated-text">Elevate Your Career Journey</h1>
+    <h4 class="animated-text">Our platform connects talented individuals with exciting job openings, empowering you to take the next step towards professional success.</h4>
+    <h3 class="animated-text">Join us now!</h3>
+
+  
+  </div>
+</div>
