--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-register/job-register.component.html
@@ -44,12 +44,12 @@
                   <select id="jobType" formControlName="jobType" class="form-select form-select-lg" placeholder="Select the Type" required>
                      
 
-                      <option value="value1">Software Developer</option>
-                      <option value="value2">Java Developer</option>
-                      <option value="value3">AI Engineer</option>
-                      <option value="value4">ML Engineer</option>
-                      <option value="value5">Data Scientist</option>
-                      <option value="value6">Data Analyst</option>
+                      <option value="Software Developer">Software Developer</option>
+                      <option value="Java Developer">Java Developer</option>
+                      <option value="AI Engineer">AI Engineer</option>
+                      <option value="ML Engineer">ML Engineer</option>
+                      <option value="Data Scientist">Data Scientist</option>
+                      <option value="Data Analyst">Data Analyst</option>
 
 
                   </select>
