--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.css
@@ -1,5 +1,5 @@
 #back{
-    background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
+    background-color: rgb(90, 174, 180);
     background-size: 100%;
     height: 800px;
 }
