--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
@@ -1,5 +1,4 @@
-<section style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
-background-size: 1920px 1300px; background-repeat: no-repeat;">
+<section class="emp-div">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
