--- a/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/forgotpassword/forgotpassword.component.html
@@ -1,7 +1,7 @@
-<section class="vh-100" style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size: 100% 100% ; background-repeat: no-repeat;">
-    <div class="container login-container py-5">
+<section class="stud-div"  >
+    <div class="container login-container py-3">
         <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-md-5">
+          <div class="col-md-9">
             <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 80%; margin: auto;">
                 <div class="card-body p-4 p-lg-5 text-black">
               <h5 class="card-title text-center mb-4">Reset Password</h5>
@@ -41,7 +41,7 @@
 
 
                 <div class="pt-1 mb-4 text-center">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="forgotpasswordform.invalid">Reset</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary" id="inputfield" type="submit" [disabled]="forgotpasswordform.invalid">Change Password</button>
                 </div>
                 <div class="text-center">
                   <a routerLink="/login">Remember Password?</a>
