--- a/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
@@ -18,11 +18,11 @@
             <li class="nav-item" >
               <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
-  
+ 
             <!-- Post Jobs -->
-            <!-- <li class="nav-item" *ngIf="currentRoute !== '/job-register'">
-              <a class="nav-link" routerLink="/job-register" routerLinkActive="active">Apply for Jobs</a>
-            </li> -->
+            
+              <!-- <a class="nav-link"  (click)="post()" >Post Jobs</a>
+             --> 
   
             <!-- Search Jobs -->
             <!-- *ngIf="currentRoute !== '/job-search'" -->
