--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="card d-flex flex-column  align-items-center" >
      <!-- style="background-image: url('https://www.sapphiresolutions.net/images/job_new_portfolio/job_portal_about.svg'); background-size: 100% ; background-repeat: no-repeat;" -->
      <!-- style="border-radius: 1rem; background-color: rgba(254, 243, 243, 0.892); backdrop-filter: blur(10px);" -->
-      <h1 class="h1 fw-bold mb-0" >Welcome To Online Recruitment Systemss</h1>
+      <h1 class="h1 fw-bold mb-0" >Welcome To Online Recruitment Systems</h1>
 
       <!-- <div class="button-group mt-4">
         <a class="btn btn-lg btn-dark mr-2" routerLink="/login" role="button">Login</a>
