--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
 
 
       <hr class="my-4">
-    
+
     </div><app-job-search></app-job-search>
   </div>
 </section> -->
@@ -23,7 +23,8 @@
     <h1 class="animated-text">Elevate Your Career Journey</h1>
     <h4 class="animated-text">Our platform connects talented individuals with exciting job openings, empowering you to take the next step towards professional success.</h4>
     <h3 class="animated-text">Join us now!</h3>
+    <p>DEMO CHnage</p>
 
-  
+
   </div>
 </div>
