--- a/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
@@ -21,8 +21,8 @@
  
             <!-- Post Jobs -->
             
-              <!-- <a class="nav-link"  (click)="post()" >Post Jobs</a>
-             --> 
+               <!-- <a class="nav-link"  (click)="post()" >Post Jobs</a> -->
+           
   
             <!-- Search Jobs -->
             <!-- *ngIf="currentRoute !== '/job-search'" -->
