Added Admin, Grad, Em, Job dash board 23rd May

--- a/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/app.component.html
@@ -50,15 +50,16 @@
             <li class="nav-item" >
               <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
             </li>
+
+            <li class="nav-item" >
+              <a class="nav-link" routerLink="/admin-login" routerLinkActive="active">Admin</a>
+            </li>
   
-            <!-- Log In -->
-            <!-- <li class="nav-item" *ngIf="currentRoute !== '/login'">
-              <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-            </li> -->
   
             <li class="nav-item" >
               <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
             </li>
+            
           </ul>
   
           <!-- Green dot for logged-in status -->
